--- a/css/responsive.css
+++ b/css/responsive.css
@@ -58,6 +58,7 @@ Milwaukie, OR - 4/11/2017
 	
 	.lightbox .lb-image {
 		min-width: 774px;
+		max-width: 900px;
 		max-height: 500px;
 		height: auto;
 	}
